# cpp-template03

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: ProjectConfigs.cmake  ProjectInstall.cmake  ProjectOptions.cmake
cmake/modules/: BuildOptions.cmake
config/: CMakeLists.txt
config/options/: CMakeLists.txt  Options.hpp.in
config/version/: CMakeLists.txt
config/version/version/: ProjectVersion.cpp.in  ProjectVersion.hpp
src/: CMakeLists.txt  main.cpp
src/component1/: CMakeLists.txt
src/component1/include/component1/: Component1.hpp
src/component1/src/: Component1.cpp
src/component2/: CMakeLists.txt
src/component2/include/component2/: Component2.hpp
src/component2/src/: Component2.cpp
test/: CMakeLists.txt  setTestsOptions.cmake
test/setUp/: CMakeLists.txt  setTestsOptions.cmake
test/setUp/src/: setUp.cpp
test/src/: test.cpp
test/tearDown/: CMakeLists.txt  setTestsOptions.cmake
test/tearDown/src/: tearDown.cpp
